# phonikud

./: .coverage  .gitignore  EN_PHONEMES.md  LICENSE  README.md  chars.py  expand.py  g2p.py  main.py  phonikud.xfst  pyproject.toml  requirements.txt  rules.py  silver_10000.csv
.github/workflows/: check.yml  hf_readme.md  hf_space.yml
deep-g2p/: config.py  data.py  infer.py  model.py  pyproject.toml  train.py  train_loop.py
docs/: AGENT.md  architecture.md
examples/: app.py  chars_set.py  editor.html  editor.py  fuzz.py  hebrew_phonemes.py  hints_editor.html  hyper_phonemes.py  main.py  phoneme_set.py  phonemize.py  possible_phonemes.py  speedtest.py  syllables.py  usage.py  with_dicta.py  with_dicta_onnx.py  with_fallback.py  with_model_nikud.py  with_nakdimon.py  with_phonikud_onnx.py
examples/editor/: index.html  main.py
examples/space_v1/: README.md  app.py
kolani/: hebrew.py  phonemize.py  syllables.py  utils.py  variants.py
kolani/expander/: __init__.py  dictionary.py
mishkal/: __init__.py  chars_set.py  config.py  hebrew.py  lexicon.py  log.py  phoneme_set.py  phoneme_table.py  phonemize.py  phonene_table.py  syllables.py  test_package.py  test_phonemize.py  utils.py  variants.py  vocab.py
mishkal/data/: 17000_gold.json  bronze_2000.json  gold_9000.json  kamatz_katan.json  rashej_tevot.json  silver_1000.csv  silver_10000.csv  silver_8500.json  silver_top_307.json  special.json  symbols.json
mishkal/dictionary/: __init__.py  symbols.json  words.json
mishkal/expander/: __init__.py  dates.py  dictionary.py  gold_9000.json  number_names.py  numbers.py  symbols.json  test_dicts.py  time_to_word.py
mishkal/letter/: __init__.py  ipa_table.py
mishkal/lexicon/: __init__.py  letter_symbol.py  letters.py  symbols.py
mishkal/sound/: __init__.py
mishkal/token/: __init__.py
mishkal/word/: __init__.py  phoneme.py
model/: README.md  pyproject.toml
model/data/: dummy.txt
model/data/eval/: dummy.txt
model/data/train/: dummy.txt
model/examples/: with_transformers.py
model/src/model/: phonikud_model.py
model/src/run/: check_error_rate.py  create_eval_report.py  eval.py  predict.py
model/src/train/: config.py  data.py  evaluate.py  main.py  train_loop.py  utils.py
phonikud/: README.md  __init__.py  check_for_cuda.py  hebrew.py  lexicon.py  phonemize.py  phonemize_fst.py  pyproject.toml  utils.py  variants.py  wget-log
phonikud/data/: test.txt
phonikud/data/eval/: dummy.txt
phonikud/data/train/: dummy.txt  initial.txt
phonikud/examples/: simple.py
phonikud/expander/: time_to_word.py
phonikud/onnx/: export.py  model.py  run.py
phonikud/onnx_lib/: export.py  run.py
phonikud/phonikud_onnx/: export.py  run.py
phonikud/src/: hebrew.py  test.py  train.py
phonikud/src/model/: __init__.py  base_model.py  phonikud_model.py
phonikud/src/run/: check_error_rate.py  main.py
phonikud/src/train/: config.py  data.py  evaluate.py  main.py  main`.py  train_loop.py  utils.py
phonikud_onnx/: DEV.md  README.md  export.py  pyproject.toml
phonikud_onnx/examples/: file.py  metadata.py  simple.py  with_gpu.py  with_session.py
phonikud_onnx/src/phonikud_onnx/: __init__.py  model.py
rules/: 2_grams.txt  letters.txt  symbols.txt  words.txt
src/mishkal/: __init__.py  chars.py  espeak_fallback.py  expand.py  g2p.py  ipa_from_letter.py  ipa_from_text.py  ipa_from_word.py  log.py  normalize.py  rules.py  rules_shva.py  text_to_ipa.py  utils.py
src/mishkal/characters/: diacritics.py  letters.py
src/mishkal/expanders/: __init__.py  dates.py  numbers.py  numbers_with_diacritics.py
src/mishkal/ipa_tables/: diacritics.py
src/mishkal/rules/: letters.txt  regex.toml  (+2 more)
tests/: manual_phonemize_test_cases.csv  manual_phonemize_test_cases1.csv  phonemize_test_cases_no_stress.csv  phonemize_test_cases_with_stress.csv  test_dicts.py  test_expander.py  test_fallback.py  test_invalid_input.py  test_normalize.py  test_package.py  test_phonemize.py  test_phonemize_fst.py  test_shva_na.py  test_syllables.py  test_time_to_word.py
tests/phonemize_test_tables/: advanced.csv  basic.csv  basic1.csv  dictionary.csv
tests/shva_test_tables/: words.csv
tests/syllables_test_tables/: basic.csv  second.csv  third.csv
(+3 files in other folders)
