[project]
name = "model"
version = "0.1.0"
description = "Hebrew nakdan with Vocal Shva and Atama'a"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "humanize>=4.12.3",
    "jiwer>=3.1.0",
    "phonikud",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "typed-argument-parser>=1.10.1",
    "wandb>=0.19.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
phonikud = { workspace = true }

[dependency-groups]
dev = [
    "pandas>=2.2.3",
]
