[project]
name = "phonikud"
version = "0.1.0"
description = "Hebrew nakdan with Shva Na and Atama'a"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "humanize>=4.12.3",
    "kolani",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "typed-argument-parser>=1.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
kolani = { workspace = true }
