[project]
name = "phonikud-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = ["onnxruntime>=1.21.1", "tokenizers>=0.21.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["onnx>=1.17.0"]
